examples/datalog/12_errors/42_invalid_aggregation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_inv_agg
Knowledge graph 'test_inv_agg' created.
Switched to knowledge graph: test_inv_agg
> .kg use test_inv_agg
Switched to knowledge graph: test_inv_agg
> +data[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'data'.
> bad(X, <INVALID:Y>) :- data(Y).
Script error: Parse error: Unknown aggregate function: 
